[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FAIRWork-RL-Inventory-Management"
version = "0.1.0"
description = "Reinforcement Learning environment for warehouse optimization."
authors = [{ name = "Sylwia Olbrych", email = "sylwia.olbrych@ima.rwth-aachen.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "rich",
    "matplotlib",
    "numpy",
    "gymnasium"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "stable_baselines3"
]

[tool.pytest.ini_options]
addopts = "--cov=inventory"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
#[tool.bumpver]
#current_version = "0.3.3"
#version_pattern = "MAJOR.MINOR.PATCH"
#commit_message  = "Bump version {old_version} -> {new_version}"
#commit          = true
#tag             = true
#push            = false
#
#
#
#[tool.bumpver.file_patterns]
#"pyproject.toml" = [
#    'current_version = "{version}"',
#    'version = "{version}"'
#]
#"setup.py" = [
#    "{version}",
#    "{pep440_version}",
#]
#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]